test/tests/compiler/8_loops/invalid_parse/do_extra_semicolon.plx
pub fn main(none) i32 {
    loop .. while 1; {
        a: i32;
    }
    return 0
}
